unpackaged/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__ExcludedPricebookIds__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ExcludedPricebookIds__c</fullName>
    <description>Comma-seperated list of price book IDs for which this discount schedule should not apply.</description>
    <inlineHelpText>Saisissez la liste des ID de catalogue de prix, séparés par une virgule, qui ne doivent pas s&#39;appliquer à ce barème de remise.</inlineHelpText>
    <label>Excluded Pricebook IDs</label>
    <type>TextArea</type>
</CustomField>