unpackaged/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__Order__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order that this discount schedule applies to.</description>
    <inlineHelpText>Commande à laquelle ce barème de remise s&#39;applique.</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Discount Schedules</relationshipLabel>
    <relationshipName>DiscountSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>