unpackaged/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__OriginalDiscountSchedule__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OriginalDiscountSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The original Discount Schedule that was overridden to create this Discount Schedule.</description>
    <inlineHelpText>Le barème de remise d&#39;origine qui a été remplacé pour créer ce barème de remise.</inlineHelpText>
    <label>Original Discount Schedule</label>
    <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
    <relationshipLabel>Discount Schedules</relationshipLabel>
    <relationshipName>DiscountSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>