unpackaged/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__Pricebook__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Price book that this discount schedule applies to. Only used in combination with Product lookup to assign product/price book specific schedule.</description>
    <inlineHelpText>Catalogue de prix auquel ce barème de remise s&#39;applique. Utilisé uniquement en combinaison d&#39;une référence Produit pour attribuer un barème spécifique au produit/catalogue de prix.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Discount Schedules</relationshipLabel>
    <relationshipName>DiscountSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>